# RocketEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  main.yml  tests.yml
examples/: CMakeLists.txt
examples/BasicApp/: BasicApp.hh  CMakeLists.txt  main.cpp
src/: RocketEngine.hh  main.cpp
src/RocketEngine/: App.hh  ECS.hh  Exceptions.hh  Utils.hh
src/RocketEngine/App/: App.cpp  App.hh  AppConfig.hh  Arguments.cpp  Arguments.hh
src/RocketEngine/ECS/: Components.hh  Entities.hh  Object.cpp  Object.hh  Scripts.hh  Systems.hh
src/RocketEngine/ECS/Components/: AComponent.hh  SpriteRenderer.cpp  SpriteRenderer.hh  Transform.cpp  Transform.hh
src/RocketEngine/ECS/Entities/: GameObject.cpp  GameObject.hh  GameObject.hpp
src/RocketEngine/ECS/Scripts/: AScript.cpp  AScript.hh
src/RocketEngine/ECS/Systems/: Scene.cpp  Scene.hh  SceneManager.cpp  SceneManager.hh
src/RocketEngine/Exceptions/: AException.hh
src/RocketEngine/Exceptions/App/: AppAlreadyExisting.hh
src/RocketEngine/Exceptions/ECS/Entities/: ComponentAlreadyPresent.hh  ScriptAlreadyPresent.hh
src/RocketEngine/Exceptions/ECS/Systems/: NoActiveScene.hh
src/RocketEngine/Utils/: Vector2.hpp
tests/: CMakeLists.txt
tests/RocketEngine/App/: Arguments.cpp
tests/RocketEngine/ECS/Entities/: GameObject.cpp
