cmake_minimum_required(VERSION 3.11)

set(ROCKETENGINE_EXAMPLE_BASICAPP_BIN  basic_app)
set(ROCKETENGINE_EXAMPLE_BASICAPP_PATH ./       )

set(ROCKETENGINE_EXAMPLE_BASICAPP_FILES
    ${ROCKETENGINE_EXAMPLE_BASICAPP_PATH}/main.cpp
)

add_executable(
    ${ROCKETENGINE_EXAMPLE_BASICAPP_BIN}
    ${ROCKETENGINE_EXAMPLE_BASICAPP_FILES}
)

target_link_libraries(
    ${ROCKETENGINE_EXAMPLE_BASICAPP_BIN}
    PUBLIC
    rocketengine
)
